# QPP-analysis-with-NPIs

./: .gitignore  CLAUDE.md  README.md
Qpp_API_documentation/: eligibility_api_request_sample.md  sample_response_200.json  sample_response_400.json  sample_response_404.json  schema.Md
cms_eligibility_extractor/: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_tests.py  run_web_app.py
cms_eligibility_extractor/.github/workflows/: ci.yml
cms_eligibility_extractor/config/: api_config.yaml  field_schema.yaml
cms_eligibility_extractor/scripts/: setup_dev.py
cms_eligibility_extractor/src/: config.py  main.py
cms_eligibility_extractor/src/api/: cms_client.py  rate_limiter.py
cms_eligibility_extractor/src/exporters/: csv_exporter.py
cms_eligibility_extractor/src/models/: flexible_schema.py  output_models.py
cms_eligibility_extractor/src/processors/: data_processor.py  multi_year_orchestrator.py  npi_reader.py
cms_eligibility_extractor/src/services/: __init__.py  extraction_service.py
cms_eligibility_extractor/static/css/: custom.css
cms_eligibility_extractor/tests/: run_all_tests.py  test_config.py  test_npi_reader.py  test_schema_validation.py
cms_eligibility_extractor/web/: __init__.py  app.py  config.py  error_handlers.py  forms.py  routes.py  utils.py
cms_eligibility_extractor/web/templates/: base.html  error.html  processing.html  results.html  upload.html
templates/: .env.example  npi_template.csv
